* ändern von new Integer zu Integer.valueOf für die Performance
git-svn-id: svn+ssh://svn.code.sf.net/p/jeegen/code/trunk@585 2b804697-b555-4dd3-bbc5-4dc99f919620